# senTM

./: README.md  pyproject.toml
notebooks/: complexitext.ipynb
sentm/: sentm.py
src/sentm/: __init__.py  complexitext.py  sentm.py
