[tool.poetry]
name = "sentm"
version = "0.1.0"
description = "Lexical Sentiment Analysis in Danish"
authors = ["MadsLang <madslangs@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MadsLang/senTM"
repository = "https://github.com/MadsLang/senTM"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
spacy = "^3.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
