[tool.poetry]
name = "sentm"
version = "0.2.1"
description = "Lexical Sentiment and Text Complexity Analysis in Danish"
authors = ["MadsLang <madslangs@gmail.com>", "TobiasGårdhus <tobias_gaardhus@hotmail.com>"]
readme = "README.md"
homepage = "https://github.com/MadsLang/senTM"
repository = "https://github.com/MadsLang/senTM"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
spacy = "^3.5.0"
ipykernel = "^6.22.0"
lemmy = "^2.1.0"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
